# SPA-LSTM-training

./: .gitignore  README.md  keras_gpu_smoke_test.py  pyproject.toml
configs/data/: features_multivariate.yaml  features_univariate.yaml  thesis_baseline_split_legacy.yaml
configs/experiments/: smoke_slm_lstm_short_1epoch.yaml  thesis_slm_lstm.yaml  thesis_slu_lstm.yaml  thesis_tlm_lstm.yaml  thesis_tlu_lstm.yaml
configs/experiments/baseline/: baseline_slm_lstm.yaml  baseline_slu_lstm.yaml  baseline_tlm_lstm.yaml  baseline_tlu_lstm.yaml
configs/experiments/baseline_replication/: baseline_slm_lstm_replication.yaml  baseline_slu_lstm_replication.yaml  baseline_tlm_lstm_replication.yaml  baseline_tlu_lstm_replication.yaml
configs/training/: stateful_default.yaml
docs/specs/: lstm_training_spec.md
scripts/: check_config_data.py  evaluate.py  evaluate_all.py  evaluate_best.py  inspect_hdf5.py  train.py  train_all.py  view_predictions.py
src/spa_lstm/: __init__.py  config.py
src/spa_lstm/data/: __init__.py  constants.py  hdf5_loader.py  scaling.py  schema.py  splits.py
src/spa_lstm/evaluation/: metrics.py  workflow.py
src/spa_lstm/models/: __init__.py  factory.py
src/spa_lstm/training/: __init__.py  resource_monitor.py  stateful.py  workflow.py
tests/: test_config.py  test_evaluation_workflow.py  test_hdf5_loader.py  test_metrics.py  test_scaling.py  test_splits.py  test_stateful_training.py  test_training_workflow.py
