[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spa-lstm-training"
version = "0.1.0"
description = "SPA bending-angle estimation training pipeline scaffold"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SPA-LSTM" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
train = [
  "tensorflow>=2.15,<2.19",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

